--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 #mysql config
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_hra
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_api
 spring.datasource.username=root
 spring.datasource.password=
 
